# courtroom-env

./: Dockerfile  README.md  SETUP-GUIDE.md  app.py  environment.py  grader.py  inference.py  openenv.yaml  pyproject.toml  pyproject[1].toml  requirements.txt  tasks.py
server/: app.py  baseline.py
