[project]
name = "courtroom-argument-simulator"
version = "1.0.0"
description = "An OpenEnv-compliant reinforcement learning environment simulating criminal defense proceedings."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"
